# gst_pipeline

./: CMakeLists.txt  host_cpu.h.in
include/: common.hpp  general_receiver.hpp  receiver.hpp
src/: general_receiver.cpp  receiver.cpp
test/: main.cpp
